<resources>
    <string name="app_name">Kotlin Practice</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_settings">Settings</string>

    <string name="hint_sign_up_email">Email</string>
    <string name="hint_login_password">Password</string>

    <string name="title_sign_up_main">Login</string>

    <string name="getotp">Get otp</string>

    <string name="title_login_forgot_password">Forgot Password ?</string>

    <string name="termscondition">By continuing, you agree to Messenger\'s Terms &amp; Conditions and Privacy Policy </string>

    <string name="mobilevalidatetext">Login with your registered mobile number</string>

    <string name="mobilenumber">Enter your registered mobile number</string>
</resources>
