<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="userviewmodel"
            type="com.example.kotlinpractice.UserViewModel" />


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bk">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_login_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/forty_eight">

                <com.example.kotlinpractice.DrawableEditText
                    android:id="@+id/tv_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/thirty_two"
                    android:layout_marginEnd="@dimen/thirty_two"
                    android:drawablePadding="@dimen/sixteen"
                    android:hint="@string/hint_sign_up_email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/sixteen"
                    android:text="@={userviewmodel.userDo1.email}"
                    android:textColor="@drawable/bg_et_disabled"
                    android:textColorHint="@color/edit_text_hint_color"
                    android:textCursorDrawable="@drawable/bg_edittext_cursor"
                    android:textSize="16sp"
                    android:theme="@style/EditTextTheme"
                    tools:targetApi="o" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_login_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_login_1"
                android:layout_marginTop="12dp"
                android:visibility="visible">

                <com.example.kotlinpractice.DrawableEditText
                    android:id="@+id/tv_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/thirty_two"
                    android:layout_marginEnd="@dimen/thirty_two"
                    android:drawablePadding="@dimen/sixteen"
                    android:hint="@string/hint_login_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:padding="@dimen/sixteen"
                    android:text="@={userviewmodel.userDo1.password}"
                    android:textColorHint="@color/edit_text_hint_color"
                    android:textCursorDrawable="@drawable/bg_edittext_cursor"
                    android:textSize="16sp"
                    android:theme="@style/EditTextTheme"
                    tools:targetApi="o" />
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_login_2"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/sixty_four"
                android:layout_marginTop="@dimen/forty_eight"
                android:layout_marginEnd="@dimen/sixty_four"
                android:background="@drawable/bg_btn_sign_in"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:onClick="@{userviewmodel::onLoginClick}"
                android:text="@string/title_sign_up_main"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="visible" />
            <!--            <androidx.appcompat.widget.AppCompatButton-->
            <!--                android:id="@+id/btn_signup"-->
            <!--                style="@style/login"-->
            <!--                android:layout_below="@id/layout_login_2"-->
            <!--                android:onClick="@{userviewmodel::onLoginClick}"-->
            <!--                android:text="GO" />-->

            <TextView
                android:id="@+id/txtForgotPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_login_2"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/twelve"
                android:layout_marginRight="@dimen/thirty_two"
                android:text="@string/title_login_forgot_password"
                android:textSize="14sp"
                android:visibility="visible" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/skip"
                android:layout_below="@id/layout_login_2"
                android:onClick="@{() -> userviewmodel.onSkipClick()}"
                android:text="Skip"
                android:visibility="invisible" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_signup"
                android:layout_centerHorizontal="true"
                android:layout_margin="15dp"
                android:text="Or"
                android:textSize="15dp"
                android:visibility="invisible" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/or"
                android:layout_centerHorizontal="true"
                android:background="@drawable/border"
                android:drawableStart="@drawable/ic_phone_android_black_24dp"
                android:drawablePadding="8dp"
                android:onClick="@{() -> userviewmodel.onMobileVerification()}"
                android:padding="15dp"
                android:text="Login With Mobile Number"
                android:visibility="invisible" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>